--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
-  overflow: hidden; /* Keep this to prevent body scrolling */
+  overflow: hidden;
 }
 
 .video-background {
